# copass

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci-python.yml  ci-typescript.yml  release-python.yml  release-typescript.yml  sdk-contract-probe.yml
docs/: api-surface.md  architecture.md  authentication.md  encryption.md  getting-started.md
docs/briefs/: 0026-phase-2-ts-sdk-gateway.md  0026-phase-3-python-sdk-gateway.md
examples/typescript/: README.md
integration/: README.md
integration/python/: conftest.py  pyproject.toml  test_contract_probe.py
integration/typescript/: contract-probe.test.ts  package.json  tsconfig.json  vitest.config.ts
python/: CHANGELOG.md  README.md
python/copass-agent-router/: README.md  pyproject.toml
python/copass-anthropic-agents/: README.md  pyproject.toml
python/copass-config/: README.md  pyproject.toml
python/copass-context-agents/: README.md  pyproject.toml
python/copass-core/: README.md  pyproject.toml
python/copass-core-agents/: pyproject.toml
python/copass-google-agents/: README.md  pyproject.toml
python/copass-hermes-agents/: README.md  pyproject.toml
python/copass-langchain/: README.md  pyproject.toml
python/copass-management/: pyproject.toml
python/copass-pydantic-ai/: README.md  pyproject.toml
python/scripts/: bump-lockstep-version.sh
scripts/: conformance_check.sh
spec/: crypto-constants.md
typescript/: .eslintrc.cjs  .gitignore  README.md  RELEASING.md  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
(+213 files in other folders)
